Test fix for learn more button firefox issue

--- a/src/main/content/_assets/css/home.scss
+++ b/src/main/content/_assets/css/home.scss
@@ -416,7 +416,8 @@ body {
 #graph_container .learn_more_link {
     position: relative;
     display: block;
-    width: 161px;
+    width: -moz-max-content;
+    width: max-content;
     margin: 0 auto;
     margin-top: -40px;
 
